--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,12 @@
         <artifactId>cucumber-reporting</artifactId>
         <version>5.3.0</version>
       </dependency>
+    <!-- https://mvnrepository.com/artifact/com.intuit.karate/karate-core -->
+      <dependency>
+          <groupId>com.intuit.karate</groupId>
+          <artifactId>karate-core</artifactId>
+          <version>1.0.1</version>
+      </dependency>
 
       <dependency>
         <groupId>com.intuit.karate</groupId>
